...
                        android:textAppearance="@style/topicslist">
                    </androidx.appcompat.widget.AppCompatButton>



                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/naryButton"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/round_bt_light_blue"
...
